design panel implemented

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,9 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 kotlin.code.style=official
 kotlin.version=1.9.20
 compose.version=1.5.10
+
+letsPlot.version=4.3.0
+letsPlotKotlin.version=4.7.0
+letsPlotSkia.version=1.0.3
+
+apacheCommonsMath.version=3.6.1
